Refine entrypoint pipeline and example project